--- a/styleNuancier.css
+++ b/styleNuancier.css
@@ -40,5 +40,14 @@ body{
 }
 
 .cell.highlight {
-    border: 3px solid rgb(255, 253, 253);
+  border-radius: 0px;
+  border: 3px solid rgb(255, 255, 255);
+}
+.cell.highlightTrue{
+  border-radius: 0px;
+  border: 3px solid rgb(255, 0, 0);
+}
+
+p{
+    color: white;
 }
